[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Goal/GoalHangingZone.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80, 80 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0235294, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[node name="GoalHangingZone" type="Area2D"]
script = ExtResource( 2 )

[node name="ZoneArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="ZoneArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneArea/Area2D"]
shape = SubResource( 2 )

[node name="ZoneLine" type="ColorRect" parent="."]
margin_left = -80.0
margin_top = 68.0
margin_right = 80.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -80.0
margin_top = 120.0
margin_right = 432.0
margin_bottom = 128.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="."]
margin_left = -80.0
margin_top = 130.0
margin_right = 124.0
margin_bottom = 144.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="ZoneArea/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ZoneArea/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
